hero alignment fix

--- a/src/app/pages/profile/components/hero/hero.component.scss
+++ b/src/app/pages/profile/components/hero/hero.component.scss
@@ -7,10 +7,13 @@
 }
 
 h1 {
-  font-size: 4.6vw;
   font-size: 4.5rem;
   line-height: 120%;
   font-weight: 600;
+
+  @media (max-width: 767px) {
+    font-size: 3rem;
+  }
 }
 
 h2 {
@@ -18,4 +21,8 @@ h2 {
   font-size: 2rem;
   line-height: 120%;
   font-weight: 400;
+
+  @media (max-width: 767px) {
+    font-size: 1.5rem;
+  }
 }
